# vplan-qml

./: .gitignore  CMakeLists.txt  README.md  resources.rsc  test.json
build-system/: Haskell.hs  Main.hs  Qt.hs  vplan-qml-build.cabal
cmake/: EnableCXX11.cmake
cpp/: Exceptions.hpp  HsContext.cpp  Index.hpp  Schedule.cpp  Schedule.hpp  ScheduleDay.cpp  ScheduleDay.hpp  ScheduleModel.cpp  ScheduleModel.hpp  ScheduleWeek.cpp  ScheduleWeek.hpp  main.cpp
gui/: CellView.qml  Prototype.qml  ScheduleModel.qml  ScheduleView.qml  ScrollBar.qml  Teachers.qml  collections.js  main.qml  utils.js
hs/: Schedule.hs
shake/: Main.hs  PkgConfig.hs
