name:                vplan-qml-build
version:             0.1.0.0
author:              Benno Fünfstück
maintainer:          benno.fuenfstueck@gmail.com
category:            Distribution
build-type:          Simple
cabal-version:       >=1.10

executable vplan-qml-build
  main-is:             Main.hs
  build-depends:       base, shake, shake-configure, containers, lens, text, system-filepath, shelly, attoparsec
  default-language:    Haskell2010